# research-paper-schema

./: .cruft.json  .nav.yml  404.html  CONTRIBUTING.md  Makefile  README.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Abstract/: index.html
Acknowledgements/: index.html
Any/: index.html
Author/: index.html
AuthorContribution/: index.html
AuthorList/: index.html
BibliographicReference/: index.html
BibliographicReferenceList/: index.html
Book/: index.html
Boolean/: index.html
Conclusion/: index.html
ConflictOfInterests/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Discussion/: index.html
Double/: index.html
Figure/: index.html
Float/: index.html
Integer/: index.html
Introduction/: index.html
Journal/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
ListOfAuthors/: index.html
Materials/: index.html
Methods/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Paragraph/: index.html
Person/: index.html
ResearchPaper/: index.html
Results/: index.html
Section/: index.html
SectionTitle/: index.html
Sparqlpath/: index.html
String/: index.html
SupplementaryInformationDescription/: index.html
Table/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
Year/: index.html
YearMonth/: index.html
about/: index.html
abstract/: index.html
acknowledgements/: index.html
additional_name/: index.html
affiliation/: index.html
(+67 files in other folders)
